# lamp

./: Makefile  README.md  bun.lockb  package.json
.devcontainer/: devcontainer.json
api/: Cargo.toml  Dockerfile
api/configs/: dev.yaml
api/src/: controllers.rs  data.rs  error.rs  lib.rs  main.rs  models.rs  services.rs
api/src/controllers/: admin.rs
api/src/data/: project.rs  script.rs  script_folder.rs
api/src/services/: admin.rs
api/src/services/admin/: delete_project.rs  delete_script.rs  delete_script_folder.rs  get_project.rs  get_project_all.rs  get_script.rs  get_script_folder_by_project.rs  post_project.rs  post_script.rs  post_script_folder.rs  put_project.rs  put_script.rs  put_script_folder.rs  put_script_folder_move.rs  put_script_move.rs
doc/: error_code.md
install/docker/lamp/: docker-compose.yml  keyfile
web/: .env.production  .eslintrc.json  bun.lockb  package.json  tailwind.config.ts
web/app/: layout.tsx  page.tsx
web/app/api/: api.ts  project.ts
web/app/dashboard/: layout.tsx  page.tsx
web/app/dashboard/project/: main.tsx  page.tsx
web/app/dashboard/user/: page.tsx
