[package]
name = "lamp"
edition = "2021"
version = "0.0.1"
description = "none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.4"
tower = "0.4.13"
config = "0.13.1"
clap = { version = "4.4.14", features = ["derive"] }
futures = {version = "0.3.0"}
validator = { version = "0.16", features = ["derive"] }
serde_json = "1.0"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-sync"]
